Bug 168786 - FILESAVE PPTX - PPT presentation with internal link leading nowhere can't be opened in PowerPoint after saving
Summary: FILESAVE PPTX - PPT presentation with internal link leading nowhere can't be ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
7.3.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.4
Keywords: bibisected, bisected
Depends on:
Blocks: PPTX-Corrupted PPTX-Hyperlink
  Show dependency treegraph
 
Reported: 2025-10-10 03:49 UTC by Aron Budea
Modified: 2025-10-30 15:42 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
ooo24358-1.ppt (50.50 KB, application/vnd.ms-powerpoint)
2025-10-10 03:49 UTC, Aron Budea
Details
Original saved as PPTX in PowerPoint for reference (46.61 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2025-10-10 03:50 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2025-10-10 03:49:26 UTC
Created attachment 203233 [details]
ooo24358-1.ppt

The attached PPT presentation, ooo24358-1.ppt is from an old AOO bug report.
After converting to PPTX with Impress, PowerPoint fails to open it, and tries to repair the presentation.

OOXML-Validator gives the following result:
[{"Description":"Relationship tag requires attribute 'Target'. Line 2, position 86.","Path":null,"Id":null,"ErrorType":"OpenXmlPackageException"}]

This is the same error, as in bug 168736, and at first glance, the cause is the same:
- in ppt/slides/_rels/slide1.xml.rels, multiple entries with empty targets: <Relationship Id="rId1" Type="http://schemas.openxmlformats.org/officeDocument/2006/relationships/slide" Target=""/>
- ppt/slides/slide1.xml, link elements like this: <a:hlinkClick r:id="rId1" action="ppaction://hlinksldjump"/>

But not exactly, in PowerPoint, the red dots have hyperlinks leading to '#2. Custom Topic A' that doesn't exist in the presentation, and the hyperlink is removed when saved to PPTX in PowerPoint. In Impress the target becomes 'Slide 2', which also doesn't exist, and is then exported incompletely.

This used to be dropped in Impress, but from the following commit in 7.3, it survives the roundtrip:
https://git.libreoffice.org/core/commit/4bfe8304a5600e236043e4ad7c6dc75fd05c937b
author		Tibor Nagy <nagy.tibor2@nisz.hu>	Mon Oct 18 14:51:05 2021 +0200
committer	László Németh <nemeth@numbertext.org>	Wed Nov 03 15:01:31 2021 +0100

"tdf#144914 PPTX export: fix interactions and hyperlinks on shapes"

I think it's reasonable to remove hyperlinks that lead nowhere within the file.
Comment 1 Aron Budea 2025-10-10 03:50:04 UTC
Created attachment 203234 [details]
Original saved as PPTX in PowerPoint for reference
Comment 2 Xisco Faulí 2025-10-27 08:52:51 UTC
a fix for this issue is already available in Collabora's branch but it's not in master branch yet
Comment 3 Commit Notification 2025-10-29 14:37:51 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/af9ec68c2acfa927ce6f5b4a8cb123fc8822dd0c

tdf#168786: Fix PPT->PPTX internal link leading nowhere

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Jazevedo 2025-10-29 20:29:19 UTC
Tested the fix with: 

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a8216f500c223797b13976678924b76c5effec65
CPU threads: 20; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

The file opened in MS Powerpoint after exported form ppt to OOXML in LO master.
Comment 5 Commit Notification 2025-10-30 14:53:51 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/da53453aa822abe6ffbc8bac20be8b1e6835d91a

tdf#168786: sd_export_tests-ooxml1: Add test

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-10-30 15:42:18 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/b113ba6359384b31025e09288df8a401510fb4a5

tdf#168786: Fix PPT->PPTX internal link leading nowhere

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.