tdf#168786: Fix PPT->PPTX internal link leading nowhere

When saving PPT files with invalid link targets to PPTX, it results in
corrupted XML output.

Remove links with empty targets during PPTX export.

Change-Id: I4c0a413c5a9c479094b3f48eead6d3676e6cf804
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192762
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>